--- a/analysis/behavior_analysis.ipynb
+++ b/analysis/behavior_analysis.ipynb
@@ -50,6 +50,78 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def get_category_counts(labels, default_thred: int, use_subject_mean: bool = False):\n",
+    "    threshold = default_thred if not use_subject_mean else np.mean(labels)\n",
+    "    low = 0\n",
+    "    for p in labels:\n",
+    "        if p < threshold:\n",
+    "            low += 1\n",
+    "\n",
+    "    return len(labels) - low, low\n",
+    "\n",
+    "\n",
+    "label_dict = {\n",
+    "    \"label_type\": [],\n",
+    "    \"subject\": [],\n",
+    "    \"global_h_count\": [],\n",
+    "    \"subject_mean_h_count\": [],\n",
+    "    \"global_l_count\": [],\n",
+    "    \"subject_mean_l_count\": [],\n",
+    "}\n",
+    "for s in audio_only[\"Subject\"].unique():\n",
+    "    for l in ['Valence', 'Arousal']:\n",
+    "        labels = audio_only[audio_only[\"Subject\"] == s][l]\n",
+    "        default_thred = 0.6 if l == \"Valence\" else 0.5\n",
+    "        high_count_global, low_count_global = get_category_counts(labels, default_thred)\n",
+    "        high_count_subject, low_count_subject = get_category_counts(\n",
+    "            labels, default_thred, True\n",
+    "        )\n",
+    "        label_dict[\"subject\"].append(s)\n",
+    "        label_dict[\"label_type\"].append(l)\n",
+    "        label_dict[\"global_h_count\"].append(high_count_global)\n",
+    "        label_dict[\"global_l_count\"].append(low_count_global)\n",
+    "        label_dict[\"subject_mean_h_count\"].append(high_count_subject)\n",
+    "        label_dict[\"subject_mean_l_count\"].append(low_count_subject)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = pd.DataFrame(label_dict)\n",
+    "subject_of_interest = [2001, 2003, 2017, 2026, 2028, 2033,  2037, 2041]\n",
+    "mask = (res[\"subject\"].isin(subject_of_interest)) & (res['label_type'] == 'Valence')\n",
+    "res[mask]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BREATH_BLOCKS = [\n",
+    "    \"breath_hvha\",\n",
+    "    \"breath_hvla\",\n",
+    "    \"breath_nvha\",\n",
+    "    \"breath_nvla\",\n",
+    "]\n",
+    "mask = result[\"condition\"].isin(BREATH_BLOCKS)\n",
+    "breath_only = result[mask]\n",
+    "\n",
+    "REST_BLOCKS = [\"meditation\", \"mind wandering\",]\n",
+    "mask = result[\"condition\"].isin(REST_BLOCKS)\n",
+    "rest_only = result[mask]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "sns.scatterplot(data=audio_only, x=\"Valence\", y=\"Arousal\", hue=\"condition\")"
    ]
   },
@@ -94,7 +166,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.17"
   },
   "orig_nbformat": 4
  },
