Add multi classification

--- a/analysis/signal_visualization.ipynb
+++ b/analysis/signal_visualization.ipynb
@@ -29,6 +29,9 @@
     "    EEG_BANDS,\n",
     ")\n",
     "\n",
+    "from features.constants import (\n",
+    "    MARKER_METADATA\n",
+    ")\n",
     "from biomarkers import (\n",
     "    ALL_MARKERS\n",
     ")"
@@ -322,15 +325,7 @@
     "\n",
     "num_epochs = 13\n",
     "\n",
-    "row_metadata = [\n",
-    "    {\"marker\": \"ECG\", \"chan\": 1, \"feature\": \"LF\"},\n",
-    "    {\"marker\": \"ECG\", \"chan\": 2, \"feature\": \"LF/HF\"},\n",
-    "    {\"marker\": \"TREV\", \"chan\": 0, \"feature\": \"Velocity\"},\n",
-    "    {\"marker\": \"EGG\", \"chan\": 2, \"feature\": \"Amplitude\"},\n",
-    "]\n",
-    "\n",
-    "\n",
-    "def getFeatureDropdown(oneblock_data, marker: str):\n",
+    "def get_channel_feature_dropdown(oneblock_data, marker: str):\n",
     "    channels = oneblock_data.get_chanlocs(marker)\n",
     "    options = [(channels[idx], idx) for idx in range(len(channels))]\n",
     "    sf = oneblock_data.marker_to_data[marker][\"srate\"].item()[0][0]\n",
@@ -400,7 +395,7 @@
     "\n",
     "    show_cbar = idx == ncols - 1\n",
     "    all_feature_array = {}\n",
-    "    for metadata in row_metadata:\n",
+    "    for metadata in MARKER_METADATA:\n",
     "        marker = metadata[\"marker\"]\n",
     "        chan = metadata[\"chan\"]\n",
     "        feature = metadata[\"feature\"]\n",
@@ -507,7 +502,7 @@
    "outputs": [],
    "source": [
     "marker = 'ECG'\n",
-    "feature = getFeatureDropdown(oneblock_data, marker)\n",
+    "feature = get_channel_feature_dropdown(oneblock_data, marker)\n",
     "feature"
    ]
   },
